Added 2 Buttons of Login and Signin (Next - Handle backend and DB)

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -18,7 +18,9 @@
 
         <input type="text" id="message" class="write-message" placeholder="Type your message here"></input>
         <button id="messageButton" type="submit">Send</button>
+        <a>I love <div>gardening<span>!</span></div></a>
     </form>
+    
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./main.js"></script>
